--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
                     </li>
                     {% endif %}
                     <!-- add jianshu add target = "_blank" to <a> by BY -->
-                    {% if site.jianshu_username %}
+                     <!-- {% if site.jianshu_username %}
                             <li>
                                 <a target="_blank" href="https://www.jianshu.com/u/{{ site.jianshu_username }}">
                                     <span class="fa-stack fa-lg">
@@ -38,7 +38,7 @@
                     {% endif %}
 
                     <!-- add Weibo, Zhihu by Hux, add target = "_blank" to <a> by Hux -->
-                    {% if site.zhihu_username %}
+                     <!-- {% if site.zhihu_username %}
                     <li>
                         <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
                             <span class="fa-stack fa-lg">
@@ -247,7 +247,7 @@
 
 <!-- Baidu Tongji -->
 {% if site.ba_track_id %}
-<script>
+ <!-- <script>
     // dynamic User by Hux
     var _baId = '{{ site.ba_track_id }}';
 
