--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -52,7 +52,7 @@ layout: default
 
                 <!-- Friends Blog -->
                 {% if site.friends %}
-                <hr>
+                 <!--<hr>
                 <h5>FRIENDS</h5>
                 <ul class="list-inline">
                     {% for friend in site.friends %}
@@ -84,7 +84,7 @@ layout: default
             ">
                 <!-- Featured Tags -->
                 {% if site.featured-tags %}
-                <section>
+                 <!--<section>
                     <hr class="hidden-sm hidden-xs">
                     <h5><a href="{{'/tags/' | prepend: site.baseurl }}">FEATURED TAGS</a></h5>
                     <div class="tags">
@@ -100,7 +100,7 @@ layout: default
                 {% endif %}
 
                 <!-- Short About -->
-                <section class="visible-md visible-lg">
+                 <!--<section class="visible-md visible-lg">
                     <hr><h5><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
                     <div class="short-about">
                         {% if site.sidebar-avatar %}
@@ -125,7 +125,7 @@ layout: default
                             {% endif %}
                             <!-- add jianshu add target = "_blank" to <a> by BY -->
                             {% if site.jianshu_username %}
-                            <li>
+                             <!--<li>
                                 <a target="_blank" href="https://www.jianshu.com/u/{{ site.jianshu_username }}">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
