--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -124,14 +124,14 @@ layout: default
         {% endif %}
 
     <!-- Sidebar Container -->
-            <div class="
+            <!-- <div class="
                 col-lg-8 col-lg-offset-2
                 col-md-10 col-md-offset-1
                 sidebar-container">
 
                 <!-- Featured Tags -->
                 {% if site.featured-tags %}
-                <section>
+                 <!--<section>
                     <hr class="hidden-sm hidden-xs">
                     <h5><a href="/tags/">FEATURED TAGS</a></h5>
                     <div class="tags">
@@ -148,7 +148,7 @@ layout: default
 
                 <!-- links Blog -->
                 {% if site.links %}
-                <hr>
+                 <!--<hr>
                 <h5>links</h5>
                 <ul class="list-inline">
                     {% for link in site.links %}
