--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -266,7 +266,7 @@
 
 <!-- Side Catalog -->
 {% if page.catalog %}
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     function generateCatalog (selector) {
         var P = $('div.post-container'),a,n,t,l,i,c;
         a = P.find('h1,h2,h3,h4,h5,h6');
